# dynaview

./: README.md  build_notes.txt  instructions.txt
src/: CMakeLists.txt  Dynaview.cc  Dynaview.h  Dynaview.ui  main.cc
src/matlab/: PMatrix.m  SCIrunViz.m  Triangulation.m  Xinfo.m  cs_midline.m  dyna_run.m  foo.m
